--- a/src/OpenIdConnectMock/packages.config
+++ b/src/OpenIdConnectMock/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.2.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.2.2" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net461" />
 </packages>
